# scaviz

./: .gitignore  COPYRIGHT  README.md  pyproject.toml  requirements.txt
examples/: spectrum_selection.py  traces.plot.py  traces_plot.ipynb
src/scaviz/: __init__.py
src/scaviz/cameras/: __init__.py  plot_camera.py
src/scaviz/controllers/: __init__.py  split_xycontroller.py
src/scaviz/graphics/: __init__.py  sequence.py
src/scaviz/objects/: __init__.py  pooled_seq.py  seq.wgsl
